--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -112,3 +112,5 @@ This value is too short. It should have {{ limit }} characters or more: Знач
 Count solving: Количество прохождений
 Unfortunately nothing found: К сожалению, ничего не найдено
 Total found crosswords: Всего найдено кроссвордов
+New crosswords: Новые кроссворды
+Popular crosswords: Популярные кроссворды
