--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -114,3 +114,4 @@ Unfortunately nothing found: К сожалению, ничего не найде
 Total found crosswords: Всего найдено кроссвордов
 New crosswords: Новые кроссворды
 Popular crosswords: Популярные кроссворды
+all: все
