--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -279,3 +279,4 @@ Crossword was saved but not published: Кроссворд сохранен, но
 For public crossword, go to url: Опубликовать ссылку на кроссворд вы можете на странице редактирования данных кроссворда
 Random crossword: Случайный кроссворд
 Count words: Количество слов
+Internal Server Error: Внутренняя ошибка сервера
