some fixes, solving for guests

--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -280,3 +280,4 @@ For public crossword, go to url: Опубликовать ссылку на кр
 Random crossword: Случайный кроссворд
 Count words: Количество слов
 Internal Server Error: Внутренняя ошибка сервера
+You regected authorization through: Вы отменили регистрацию через
