--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -45,7 +45,7 @@ constructor:
     text_minlength: Слишком короткое слово
     text_maxlength: Слишком длинное слово
     word_valid : Слово введено корректно
-main_intro: "Приветствуем вас на нашем сайте-сервисе по созданию и редактированию кроссвордов. Найдеемся, наша работа окажется вам полезной"
+main_intro: "Приветствуем вас на сайте-сервисе по созданию и решению кроссвордов. Найдеемся, наша работа окажется вам полезной"
 Crosswords: Кроссворды
 Profile: Профиль
 Under construction: В разработке
