--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -80,7 +80,7 @@ Crosswords not found: Кроссворды не найдены
 Login through social services: Вы можете войти на сайт, используя аккаунт в социальных сервисах
 or use your account on site: или использовать зарегистрированный на сайте аккаунт
 Bad credentials: Неверная пара логин/пароль
-Authorized users can create own crosswords. For solving crosswords authorization not required: Авторизиванным пользователям доступно создание кроссвордов. Для решения кроссвордов авторизация не требуется.
+Authorized users can create own crosswords. For solving crosswords authorization not required: Авторизованным пользователям доступно создание кроссвордов. Для решения кроссвордов авторизация не требуется.
 Registered users can create own crosswords: Зарегистрированные пользователи могут создавать кроссворды
 Create crossword: Создание кроссворда
 Edit crossword: Редактирование кроссворда
