--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -291,3 +291,7 @@ sortBy_rating: рейтингу
 sortBy_countSolvings: количеству решений
 Published date: Дата публикации
 List crosswords: Все кроссворды
+community crosswords: кроссворды сообщества
+your first crossword or: свой первый кроссворд или
+Go create: Создайте
+go solve: решите
