--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -124,7 +124,7 @@ Search term: Искомая строка
 This value is too short. It should have {{ limit }} characters or more: Значение слишком короткое. Должно быть {{ limit }} символов или больше
 Count solvings: Количество прохождений
 Unfortunately nothing found: К сожалению, ничего не найдено
-Total found crosswords: Всего найдено кроссвордов
+Found crosswords: Найдено кроссвордов
 New crosswords: Новые кроссворды
 Popular crosswords: Популярные кроссворды
 all: все
@@ -284,7 +284,7 @@ Internal Server Error: Внутренняя ошибка сервера
 You regected authorization through: Вы отменили регистрацию через
 You may clarify your query with help tags: Вы можете уточнить ваш запрос с помощью тегов
 Popular tags: Популярные тэги
-Click on will clarify search query: Кликните по тегу чтобы уточнить запрос
+Click on will clarify search query: Кликните по тегу, чтобы уточнить запрос
 Sort by: Сортировать по
 sortBy_publishedAt: дате публикации
 sortBy_rating: рейтингу
@@ -295,3 +295,5 @@ community crosswords: кроссворды сообщества
 your first crossword or: свой первый кроссворд или
 Go create: Создайте
 go solve: решите
+Cancel rating: Отозвать свой голос
+Rating: Ратинг
