--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -296,4 +296,4 @@ your first crossword or: свой первый кроссворд или
 Go create: Создайте
 go solve: решите
 Cancel rating: Отозвать свой голос
-Rating: Ратинг
+Rating: Рейтинг
