--- a/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
+++ b/src/Anyx/CrosswordBundle/Resources/translations/messages.ru.yml
@@ -112,7 +112,7 @@ Crossword saved successfully: Кроссворд успешно сохранен
 Crossword can be published if he contains more than one word: Кроссворд может быть опубликован, если он содержит более одного слова
 Go to constructor: Перейти к конструктору
 Crossword editor: Редактор кроссвордов
-Crossword editor. Service for creating and solving crosswords: Редактор кроссвордов. Сервис для создания и решения кроссвордов
+Crossword editor. Service for creating and solving crosswords: Редактор кроссвордов онлайн. Сервис для создания и решения кроссвордов
 About: О проекте
 Wanna talk?: Хотите поговорить?
 Creation and solution crosswords: Создание и решение кроссвордов
@@ -134,7 +134,7 @@ Page not found: Страница не найдена
 Report a bug: Сообщить об ошибке
 Find crosswords: Поиск кроссвордов
 site:
-  keywords: 'Кроссворды, редактор кроссвордов, конструктор кроссвордов, коллекция кроссвордов, новые кроссворды, кроссворды по ЕГЭ'
+  keywords: 'Кроссворды, редактор кроссвордов онлайн, онлайн конструктор кроссвордов, коллекция кроссвордов, решение кроссвордов онлайн, новые кроссворды, кроссворды по ЕГЭ'
   error:
     not_found: 'К сожалению, страница, на которую вы пытались попасть, не найдена. Если вы уверены, что то произошло по нашей ошибке, сообщите об этом.'
     internal: 'К сожалению, произошла внутренняя ошибка сервера. Если вы видите это страницу, то мы уже в курсе проблемы и работаем над исправлением. Однако, вы можете помочь нам, описав, при каких условиях произошла ошибка, или написать любые пожелания'
@@ -297,3 +297,11 @@ Go create: Создайте
 go solve: решите
 Cancel rating: Отозвать свой голос
 Rating: Рейтинг
+Statistic of crossword: Статистика кроссворда
+Date public: Дата публикации
+Words count: Количество слов
+Solvings count: Количество решений
+Correct solvings count: Количество верных решений
+User: Пользователь
+Anonymous user: Анонимный пользователь
+Last solutions: Последние решения
